# femtoGPT

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: gpt.rs  graph.rs  lib.rs  main.rs  optimizer.rs  tokenizer.rs
src/funcs/: add.rs  cat.rs  coeff.rs  crossentropy.rs  crossentropyfunc.rs  dropout.rs  embedding.rs  gelu.rs  layer_norm.rs  mask.rs  matmul.rs  mod.rs  relu.rs  softmax.rs  transpose.rs  trilmask.rs
src/funcs/gpu/: add.rs  cat.rs  coeff.rs  crossentropy.rs  dropout.rs  embedding.rs  gelu.rs  layer_norm.rs  matmul.rs  mod.rs  relu.rs  softmax.rs  transpose.rs  trilmask.rs
src/graph/: mod.rs
src/graph/gpu/: mod.rs  program.rs
src/tensor/: elements.rs  error.rs  helper.rs  mod.rs  ops.rs  utils.rs  view.rs
src/tokenizer/: byte.rs  mod.rs  sentencepiece.rs  simple.rs
