[package]
name = "femto-gpt"
version = "0.1.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
edition = "2021"
description = "Minimal Rust library for training GPT language-models"
repository = "https://github.com/keyvank/femtoGPT"
homepage = "https://github.com/keyvank/femtoGPT"
license = "MIT"


[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rayon = "1.7.0"
thiserror = "1.0"
ocl = { version = "0.19", optional = true }

[features]
gpu = ["ocl"]
